--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   google_fonts: ^5.1.0
+  image_cropper: ^5.0.0
+  image_picker: ^1.0.2
+  shared_preferences: ^2.2.0
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
